--- a/portfolio-landing-page/index.html
+++ b/portfolio-landing-page/index.html
@@ -9,35 +9,37 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Victor M. Puentes Jr.</h1>
-          <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/14712781_10100662021370869_5007248813586456551_o.jpg?oh=b64cdd6f472d4883a21523e44ab6e6f9&oe=59C50156">
-          
-          <h2>About Me</h2>
-        <p>Born in San Francisco, CA, raised in Seattle, WA, educated in Boston, MA (Berklee '07), refined in Philadelphia, and now back in the musical richness of the PNW, I have always played my horn in musically­ fertile cities. Starting at the age of 6 on the clarinet and then to trumpet at nine, I've always knew music would be a lifelong journey for me, so I worked on honing my skills and have tried diligently to keep practicing. I would say my hard work at an early age is what earned me a scholarship to Berklee College of Music. Going to school for music changed my concept of music forever! While in school, I immersed myself into the Boston Music scene and studied with some amazing professors that always challenged me musically.Through the years I has also made an effort to study independently and hounded some of my favorite artists to give me music lessons, I had and have no shame in asking people to teach me something. I believe this attitude led me to performance opportunities with world-reknowns artists like <em>Gloria Estefan</em> and the <em>Chieftains</em>.</p>
-        <img src="https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/1078892_926879893309_2141763662_o.jpg?oh=0137e5492505d49cd3badacefc8c2594&oe=5A0D4A5C">
-
-        <h2>Hobbies</h2>
-          <ul>
-            <li>I <span class="love">love</span> to cook. I've had some great cooking teachers and experiences in my life that I'm grateful for. I used to be a line cook at Benaroyal Hall for Wolfgang puck Catering, it was a great experience that taught many cooking techniques that I never knew, but nothing can compare to watching and learning from my grandmothers in the kitchen.</li>
-            <li>I <span class="love">love</span> to exercise...although I don't do it as often as I should.</li>
-            <li>I <span class="love">love</span> to play poker, especially with family and friends.</li>
-            <li>I <span class="love">love</span> to travel, I've only been to three continents and would love to tackle the rest in my lifetime. Yes, even Antartica!</li>
-            <li>I <span class="love">love</span> to hear live music. There's nothing like it.</li>
-            <li>I <span class="love">love</span> to learn. I try very hard to always keep an open-mind and have humility in what I know and what I think I know in order to keep learning.</li>
-          </ul>
-
-        <h2>Why Epicodus</h2>
-        <p>Now, I'm on a new Journey at Epicodus and am thrilled to be imersed in a new world of knowledge and information.My hopes are to continue on this new path of coding that I've embarked on, utilizing my newfound knowledge to impact and influence positive social change in my community, through technology and music.</p>
-
-        <h2>Projects at epicodus</h2>
-          <ol>
-            <li><a href="https://github.com/vmpuentes/hello-world.html/blob/master/hello-world.html">hello world</a></li>
-            <li><a href="https://github.com/vmpuentes/cookie-recipe/blob/master/cookie-recipe.html">cookie recipe</a></li>
-            <li><a href="https://github.com/vmpuentes/resort-website/blob/master/index.html">resort website</a></li>
-            <li><a href="https://github.com/vmpuentes/boring-lecture/blob/master/boring-lecture.html">boring lecture</a></li>
-            <li><a href="https://github.com/vmpuentes/my-first-webpage/blob/master/index.html">my first webpage</a></li>
-            <li><a href="https://github.com/vmpuentes/favorite-band-webpage">my favorite band</a></li>
+          <img class="main" src="https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/14712781_10100662021370869_5007248813586456551_o.jpg?oh=b64cdd6f472d4883a21523e44ab6e6f9&oe=59C50156">
+        <h2>About Me</h2>
+         <p>Born in San Francisco, CA, raised in Seattle, WA, educated in Boston, MA (Berklee '07), refined in Philadelphia, and now back in the musical richness of the PNW, I have always played my horn in musically­ fertile cities. Starting at the age of 6 on the clarinet and then to trumpet at nine, I've always knew music would be a lifelong journey for me, so I worked on honing my skills and have tried diligently to keep practicing. I would say my hard work at an early age is what earned me a scholarship to Berklee College of Music. Going to school for music changed my concept of music forever! While in school, I immersed myself into the Boston Music scene and studied with some amazing professors that always challenged me musically.Through the years I has also made an effort to study independently and hounded some of my favorite artists to give me music lessons, I had and have no shame in asking people to teach me something. I believe this attitude led me to performance opportunities with world-reknowns artists like <em>Gloria Estefan</em> and the <em>Chieftains</em>.</p>
+         <img class="second" src="https://scontent-dft4-2.xx.fbcdn.net/v/t31.0-8/1078892_926879893309_2141763662_o.jpg?oh=0137e5492505d49cd3badacefc8c2594&oe=5A0D4A5C">
+        <div class="hobbies">
+         <h2>Hobbies</h2>
+           <ul>
+             <li>I <span class="love">love</span> to cook. I've had some great cooking teachers and experiences in my life that I'm grateful for. I used to be a line cook at Benaroyal Hall for Wolfgang puck Catering, it was a great experience that taught many cooking techniques that I never knew, but nothing can compare to watching and learning from my grandmothers in the kitchen.</li>
+             <li>I <span class="love">love</span> to exercise...although I don't do it as often as I should.</li>
+             <li>I <span class="love">love</span> to play poker, especially with family and friends.</li>
+             <li>I <span class="love">love</span> to travel, I've only been to three continents and would love to tackle the rest in my lifetime. Yes, even Antartica!</li>
+             <li>I <span class="love">love</span> to hear live music. There's nothing like it.</li>
+             <li>I <span class="love">love</span> to learn. I try very hard to always keep an open-mind and have humility in what I know and what I think I know in order to keep learning.</li>            </ul>
+         </div>
+          <h2>Why Epicodus?</h2>
+           <p>Now, I'm on a new Journey at Epicodus and am thrilled to be imersed in a new world of knowledge and information.My hopes are to continue on this new path of coding that I've embarked on, utilizing my newfound knowledge to impact and influence positive social change in my community, through technology and music.</p>
+         <div class="projects">
+          <h2>Projects at epicodus</h2>
+           <ol>
+             <li><a href="https://github.com/vmpuentes/hello-world.html/blob/master/hello-world.html">hello world</a></li>
+             <li><a href="https://github.com/vmpuentes/cookie-recipe/blob/master/cookie-recipe.html">cookie recipe</a></li>
+             <li><a href="https://github.com/vmpuentes/resort-website/blob/master/index.html">resort website</a></li>              <li><a href="https://github.com/vmpuentes/boring-lecture/blob/master/boring-lecture.html">boring lecture</a></li>                <li><a href="https://github.com/vmpuentes/my-first-webpage/blob/master/index.html">my first webpage</a></li>
+             <li><a href="https://github.com/vmpuentes/favorite-band-webpage">my favorite band</a></li>
           </ol>
+        </div>
       </div>
     </div>
   </body>
 </html>
+
+
+
+
+
